--- a/index.html
+++ b/index.html
@@ -37,10 +37,21 @@
 <!--//ResponsiveTabs-->
 </head>
 <body>
+	
+
+
 	<!-- main -->
 	<div class="main">
+		<!-- left -->
+		<div class="main-row" id="leftDiv">
+				<h2>左边div</h2>			
+		</div>
+
 		<h1>Welcome</h1>
 		<div class="main-info w3l">
+
+
+			
 			<div class="main-row"><!-- main-row-one -->
 				<div class="profile-grid logo wthree">
 					<img src="images/img1.jpg" alt="">
@@ -62,6 +73,11 @@
 				<div class="clear"> </div>
 			</div>	
 		</div>	
+
+		<!-- right -->
+		<div class="main-row" id="rightDiv">
+				<h2>右边div</h2>				
+		</div>
 	</div>	
 	<!-- main -->
 </body>
