添加两个css样式的方法

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 	<div class="list-left" id="leftDiv">
 		<ul>
 			<h2>目录</h2>
-			<li><div>第一章：阿里的撒地方</div></li>
+			<li><div><a href="content/roundedCornersInside .html">第一章：边框内圆角</a></div></li>
+			<li><div><a href="content/Striped-bg.html">第二章：条纹背景</a></div></li>
 			<li><div>第二章：阿里的撒地方</div></li>
 			<li><div>第三章：阿里的撒地方</div></li>
 			<li><div>第四章：阿里的撒地方</div></li>
