添加nginx脚本，添加font-awsome脚本
1添加一个bash脚本，将代码更新到本地nginx
2添加一个字体库，font-awasome

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <!--<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>-->
 <!--//web font-->
 <!--circle-chart-->
-<script src="js/jquery-1.11.1.min.js"></script> 
+<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/common.js" type="text/javascript"></script>
 <!--//circle-chart-->
 
 <!--ResponsiveTabs-->
@@ -79,7 +80,7 @@
 			<h2>目录</h2>
 			<li><div><a href="content/roundedCornersInside .html">第一章：边框内圆角</a></div></li>
 			<li><div><a href="content/Striped-bg.html">第二章：条纹背景</a></div></li>
-			<li><div>第二章：阿里的撒地方</div></li>
+			<li><div><a href="content/fontasome.html">第二章：阿里的撒地方</a></div></li>
 			<li><div>第三章：阿里的撒地方</div></li>
 			<li><div>第四章：阿里的撒地方</div></li>
 			<li><div>第五章：阿里的撒地方</div></li>
