--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<h2>目录</h2>
 			<li><div><a href="content/roundedCornersInside .html">第一章：边框内圆角</a></div></li>
 			<li><div><a href="content/Striped-bg.html">第二章：条纹背景</a></div></li>
-			<li><div><a href="content/fontasome.html">第二章：阿里的撒地方</a></div></li>
+			<li><div><a href="content/fontasome.html">第二章：font-awsome字体库</a></div></li>
 			<li><div>第三章：阿里的撒地方</div></li>
 			<li><div>第四章：阿里的撒地方</div></li>
 			<li><div>第五章：阿里的撒地方</div></li>
