--- a/projects/index.html
+++ b/projects/index.html
@@ -195,8 +195,15 @@
 </ol>
 
     </div>
-</div>
+    <script src="https://utteranc.es/client.js"
+        repo="nexiuss/utterances"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
 
+</div>
 
 
         </main><footer class="footer">
