--- a/projects/nexius-blog/index.html
+++ b/projects/nexius-blog/index.html
@@ -194,8 +194,15 @@
 <p>Keep an eye on this space for my upcoming projects</p>
 
     </div>
-</div>
+    <script src="https://utteranc.es/client.js"
+        repo="nexiuss/utterances"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
 
+</div>
 
 
 
