--- a/projects/ros/index.html
+++ b/projects/ros/index.html
@@ -206,8 +206,15 @@
 <p>查看doc文档</p>
 
     </div>
-</div>
+    <script src="https://utteranc.es/client.js"
+        repo="nexiuss/utterances"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
 
+</div>
 
 
 
