--- a/projects/index.html
+++ b/projects/index.html
@@ -192,6 +192,7 @@
 <ol>
 <li><a href="/projects/nexius-blog/">hugo博客</a></li>
 <li><a href="/projects/ros/">ros</a></li>
+<li><a href="/projects/kmp-devtoy/">ros</a></li>
 </ol>
 
     </div>
