--- a/projects/index.html
+++ b/projects/index.html
@@ -19,19 +19,19 @@
 
     
     <title>Projects</title>
-    <meta name="description" content="Hello my projects are hugo博客 ros ros ">
+    <meta name="description" content="Hello my projects are hugo博客 ros kmp-devtoy ">
     <meta name="keywords" content='blog, gokarna, hugo'>
 
     <meta property="og:url" content="https://nexiuss.github.io/projects/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Projects">
-    <meta property="og:description" content="Hello my projects are hugo博客 ros ros ">
+    <meta property="og:description" content="Hello my projects are hugo博客 ros kmp-devtoy ">
     <meta property="og:image" content="https://nexiuss.github.io/images/logo.jpg">
     <meta property="og:image:secure_url" content="https://nexiuss.github.io/images/logo.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Projects">
-    <meta name="twitter:description" content="Hello my projects are hugo博客 ros ros ">
+    <meta name="twitter:description" content="Hello my projects are hugo博客 ros kmp-devtoy ">
     <meta property="twitter:domain" content="https://nexiuss.github.io/projects/">
     <meta property="twitter:url" content="https://nexiuss.github.io/projects/">
     <meta name="twitter:image" content="https://nexiuss.github.io/images/logo.jpg">
@@ -193,7 +193,7 @@
 <ol>
 <li><a href="/projects/nexius-blog/">hugo博客</a></li>
 <li><a href="/projects/ros/">ros</a></li>
-<li><a href="/projects/kmp-devtoy/">ros</a></li>
+<li><a href="/projects/kmp-devtoy/">kmp-devtoy</a></li>
 </ol>
 
     </div>
